--- a/front/src/app/views/auth/pages/login/login.component.html
+++ b/front/src/app/views/auth/pages/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<form [formGroup]="form" (submit)="login()">
+    <h1 class="mb-4">Login</h1>
+    <div class="">
+      <input type="email" formControlName="email" class="form-control" placeholder="Email"
+        [class.is-invalid]="isInvalid('email')" required>
+    </div>
+    <div class="">
+      <input type="password" formControlName="password" class="form-control" placeholder="Password"
+        [class.is-invalid]="isInvalid('password')" required>
+    </div>
+    <div class="">
+      <div class="">
+        <button [disabled]="form.invalid" type="submit" class="btn btn-primary btn-primary-color px-4" ngxLoading
+          [loadingFlag]="loading" [textInitial]="'Iniciar Sesión'"
+          [textLoading]="'Cargando'"></button>
+      </div>
+    </div>
+  </form>
