--- a/front/src/app/views/auth/pages/login/login.component.html
+++ b/front/src/app/views/auth/pages/login/login.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="">
       <div class="">
-        <button [disabled]="form.invalid" type="submit" class="btn btn-primary btn-primary-color px-4" ngxLoading
+        <button [disabled]="form.invalid" type="submit" class="" ngxLoading
           [loadingFlag]="loading" [textInitial]="'Iniciar Sesión'"
           [textLoading]="'Cargando'"></button>
       </div>
