--- a/front/src/app/views/auth/pages/register/register.component.html
+++ b/front/src/app/views/auth/pages/register/register.component.html
@@ -1,1 +1,33 @@
-<p>register works!</p>
+<!-- 
+<form [formGroup]="form" (submit)="register()">
+    <div class="container-form">
+       <img  id="fondo" src="/front/src/assets/imagenes/Healthy life.png">
+      <h1 class="mb-4">Crear una cuenta</h1>
+      <p class="text1">ya tienes una cuenta</p>
+      <a href="" class="login"> Iniciar sesión</a>
+      <div class=" email">
+        <label class="label1"> Nombre</label>
+        <input type="name" formControlName="name" class="form-control" placeholder="Ingresa tu nombre completo"
+          [class.is-invalid]="isInvalid('name')" required>
+      </div>
+      <div class=" email">
+        <label class="label1"> Correo Electrónico</label>
+        <input type="email" formControlName="email" class="form-control" placeholder="Ingresa tu correo electrónico"
+          [class.is-invalid]="isInvalid('email')" required>
+      </div>
+      <div class="pass">
+        <label class="label1">Contraseña</label>
+        <input type="password" formControlName="password" class="form-control2" placeholder="Contraseña"
+          [class.is-invalid]="isInvalid('password')" required>
+      </div>
+      <a href="" class="forgot">olvidaste tu Contraseña</a>
+      <div class="">
+        <div class="btn">
+          <button [disabled]="form.invalid" type="submit" class="btn" ngxLoading
+            [loadingFlag]="loading" [textInitial]="'Ingresar'"
+            [textLoading]="'Cargando'"></button>
+        </div>
+       <checkbox>Eres padre de familia</checkbox>
+      </div>
+    </div>
+    </form> -->
