--- a/front/src/app/views/auth/pages/login/login.component.html
+++ b/front/src/app/views/auth/pages/login/login.component.html
@@ -10,9 +10,7 @@
     </div>
     <div class="">
       <div class="">
-        <button [disabled]="form.invalid" type="submit" class="" ngxLoading
-          [loadingFlag]="loading" [textInitial]="'Iniciar Sesión'"
-          [textLoading]="'Cargando'"></button>
+        <button [disabled]="form.invalid" type="submit" class="" ngxLoading [loadingFlag]="loading" [textInitial]="'Iniciar Sesión'" [textLoading]="'Cargando'"></button>
       </div>
     </div>
   </form>
