--- a/front/src/sass/styles.scss
+++ b/front/src/sass/styles.scss
@@ -1,2 +1,258 @@
 /* You can add global styles to this file, and also import other style files */
 @import "variables";	
+
+*{
+    font-family: $font-primary;
+    margin: 0;
+    padding: 0;
+    color: $black;
+    box-sizing: border-box;
+    transition: all .5s;
+    user-select: none;
+}
+
+body, app-login{
+    width: 100%;
+    min-height: 100vh;
+    height: auto;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.d__grid{
+    display: grid;
+    grid-template-columns: 70% 30%;
+    overflow: hidden;
+}
+
+.m__form{
+    margin: 88px 72px;
+}
+
+.form__content{
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    border: 1px solid rgba(245, 245, 245, 0.8);
+    box-shadow: -4px 1px 21px rgba(0, 0, 0, 0.02);
+    border-radius: 30px;
+    max-width: 1100px;
+}
+
+.form{
+    padding: 72px 0 72px 104px;
+    max-width: 600px;
+    &.register{
+        padding: 48px 0 40px 104px;
+    }
+}
+.logo{
+    font-size: 24px;
+    letter-spacing: -0.09em;
+    margin-bottom: 32px;
+    span{
+        color: $color-primary;
+    }
+}
+
+.title__principaly{
+    font-weight: 700;
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.text__principlay{
+    font-size: 16px;
+    line-height: 27px;
+    color: $grey;
+    margin-bottom: 40px;
+}
+
+.form__group{
+    display: flex;
+    flex-direction: column;
+    margin-top: 24px;
+    label{
+        font-weight: bold;
+        margin-bottom: 16px;
+        font-size: 16px;
+    }
+    &.column{
+        flex-direction: row;
+        align-items: center;
+        gap: 16px;
+        label{
+            margin-bottom: 0;
+        }
+    }
+    .form__control{ 
+        border-radius: 30px;
+        background-color: #f9f9f9;
+        height: 40px;
+        border: none;
+        font-size: 16px;
+        flex-shrink: 0;
+        padding: 8px 24px;
+        color: $black;
+        flex-grow: 0;
+        &::placeholder{
+            font-size: 16px;
+            color: $grey-light;
+        }
+        &.is-invalid{
+            border: 1px solid rgb(204, 87, 72);
+        }
+    }
+}
+
+.btn__primary{
+    background: $color-primary;
+    height: 40px;
+    border-radius: 30px;
+    color: white;
+    border: none;
+    font-weight: bold;
+    font-size: 16px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    cursor: pointer;
+    &:hover{
+        box-shadow: 0px 6px 13px rgb(0 0 0 / 24%);
+        background: #6694ff;
+    }
+    &:invalid,&:disabled{
+        background: #6694ff7e;
+        cursor: auto;
+        &:hover{
+            box-shadow: none;
+            background: #6694ff7e;
+        }
+    }
+}
+
+.forgot__password{
+    display: flex;
+    justify-content: end;
+    color: $grey;
+    margin-top: 32px;
+    font-size: 16px;
+}
+
+
+
+.about__register{
+    display: flex;
+    margin-top: 32px;
+    a{
+        font-weight: bold;
+    }
+}
+
+.container__inner{
+    position: relative;
+    background: #0000 url('/assets/img/bg_2.jpg') no-repeat 0px 0px;
+    filter: opacity(.4);
+    background-size: cover;
+    background-position: 20% 0%;
+    border-radius: 0 30px 30px 0;
+    height: 100%;
+    .wave{
+        position: relative;
+        height: 100%;
+        img{
+            transform: rotate(90deg);
+            transform-origin: 5% 10%;
+            width: 206%;
+            height: 50%;
+            position: absolute;
+            left: 148px;
+        }
+    }
+}
+
+@media screen and (max-width:1440px) {
+    .logo {
+        margin-bottom: 26px;
+    }
+    
+    .form{
+        padding: 40px 0 32px 80px;
+        max-width: 600px;
+    }
+
+    .text__principlay {
+        line-height: auto;
+        margin-bottom: 24px;
+    }
+    
+    .container__inner {
+        .wave {
+            img {
+                width: 178%;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:1100px) {
+    .form__content {
+        max-width: 977px;
+    }
+    .container__inner {
+        .wave {
+            img {
+                width: 200%;
+            }
+        }
+    }
+    .form{
+        padding: 40px 0 32px 64px;
+    }
+}
+
+@media screen and (max-width:980px) {
+    .d__grid{
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.6fr 1fr;
+        width: 80%;
+        margin: 32px 0;
+    }
+    .form{
+        order: 1;
+    }
+
+    .container__inner .wave img {
+        transform: rotate(0deg);
+        transform-origin: 0% 0%;
+        width: auto;
+        height: auto;
+        position: absolute;
+        bottom: -40px;
+        left: 0;
+    }
+
+    .container__inner {
+        border-radius: 0;
+    }
+
+    .form{
+        padding: 40px;
+        max-width: 600px;
+    }
+}
+
+
+@media screen and (max-width:430px) {
+    .d__grid{
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.5fr 1fr;
+        width: 95%;
+        margin: 24px 0;
+    }
+}
