--- a/front/src/app/views/auth/components/body/body.component.html
+++ b/front/src/app/views/auth/components/body/body.component.html
@@ -5,11 +5,9 @@
 <main class="container">
     <section class="d__grid form__content">
       <!-- FORM -->
-      <ng-content select="[form]">
-
-        </ng-content>
+      <ng-content select="[form]"></ng-content>
       <!-- IMG -->
-      <div class="container__inner">
+      <div class="container__inner" [ngClass]="class">
         <div class="wave">
          <!-- <div class=""> -->
           <img src="./assets/img/wave.svg" alt="">
