--- a/front/src/app/views/auth/pages/register/register.component.html
+++ b/front/src/app/views/auth/pages/register/register.component.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     </form> -->
-    <app-body>
+    <app-body [class]="'register'">
       <div class="form register" form>
         <div class="header__content">
           <app-logo></app-logo>
